# rust-erpc

./: .gitmodules  Cargo.toml
.github/workflows/: check.yml  rustfmt.yml  test.yml
examples/: ble.rs  serial.rs
src/: codec.rs  cursor.rs  framed_transport.rs  lib.rs  request.rs
std-transport/: Cargo.toml  README.md
std-transport/examples/: serial.rs  tcp.rs
std-transport/src/: lib.rs
std-transport/test/erpc_shim/rpc_ble_callback/: common.py  server.py
test/: prepare_env.sh  test_server.py
test/erpc_shim/: __init__.py
test/erpc_shim/rpc_ble_api/: __init__.py  client.py  common.py  interface.py  server.py
test/erpc_shim/rpc_ble_callback/: client.py  interface.py
test/wioterminal_passthrough/: wioterminal_passthrough.ino  wioterminal_passthrough.uf2
