[package]
name = "rust-erpc"
version = "0.1.0"
authors = ["Kenta IDA <fuga@fugafuga.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = {version = "0.3.0", default-features = false}
num-derive = {version = "0.3.2", default-features = false}
num-traits = {version = "0.2.12", default-features = false}
heapless = {version = "0.5.6"}
lazy_static = {version = "1.4.0"}

[features]
default = []
std = []

[[example]]
name = "ble"
features = ["std"]